[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
addopts = --cov-config=setup.cfg --cov=. --cov-report=term-missing .

[coverage:run]
omit = tests/*, setup.py

[tool:isort]
profile=black
line_length=115
balanced_wrapping=True
forced_separate=
no_lines_before=LOCALFOLDER


[mypy-prometheus_client]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True